--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Edgarmacas.GitHub.oi</h1>
-        <p>Pagina sobre mi informacion Edgar Macas</p>
+        <h1>Bienvenido a la Páguina Web de Edgar Macas</h1>
+        <p>Información sobre Android y proyectos Web</p>
         <p class="view"><a href="https://github.com/edgarmacas/edgarmacas.github.oi">View the Project on GitHub <small>edgarmacas/edgarmacas.github.oi</small></a></p>
         <ul>
           <li><a href="https://github.com/edgarmacas/edgarmacas.github.oi/zipball/master">Download <strong>ZIP File</strong></a></li>
