--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<meta name="author" content="Peter Finlan" />
 		<!-- Bootstrap -->
 		<script src="js/modernizr.custom.js"></script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/jquery.fancybox.css" rel="stylesheet">
 		<link href="css/flickity.css" rel="stylesheet" >
